--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -63,6 +63,7 @@ ul {
   max-width: 25rem;
   width: 100%;
   background-color: #5C7F67;
+  overflow: hidden;
 }
 .Todo .Todo__list {
   padding: 0 0.5rem;
@@ -136,6 +137,29 @@ ul {
   background-color: #ECF4E7;
   color: #24321A;
   padding: 0.5rem 1rem;
+}
+
+.item-enter {
+  transform: translateX(-110%);
+  opacity: 0;
+}
+
+.item-enter-active {
+  transform: translateX(0);
+  opacity: 1;
+  transition: all 500ms;
+}
+
+.item-exit {
+  transform: translateX(0);
+  opacity: 0;
+  display: none;
+}
+
+.item-exit-active {
+  transform: translateX(110%);
+  opacity: 1;
+  transition: all 500ms;
 }
 
 /*# sourceMappingURL=index.css.map */
